--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
   <section id="contact">
     <h2>Contact</h2>
+    <h1>  test this in the netlify</h1>
     <p>If you have any questions, feel free to contact us at <a href="mailto:support@example.com">support@example.com</a>.</p>
   </section>
 
